terraform/infra/ingress.yaml
# Ingress exposes HTTP and HTTPS routes from outside the cluster to services within the cluster. Traffic routing is controlled by rules defined on the Ingress resource.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-tracker
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
        - backend:
            service:
              name: task-tracker
              port:
                number: 80
          path: /
          pathType: Prefix
